--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -1,5 +1,3 @@
-
-
 <%- include('./head') %>
 
 
@@ -15,6 +13,15 @@
         height: 65px;
     }
 }
+/* .logo-image {
+        margin-top: 20px;
+        margin-left: 0; 
+    } */
+
+    .icon {
+        text-align: left; /* Ensure the container aligns its content to the left */
+    }
+
 </style>
         <!-- menu -->
         <div class="mil-menu-frame">
@@ -119,11 +126,9 @@
         <!-- curtain end -->
 
         <!-- frame -->
-        <div class="mil-frame">
+        <!-- <div class="mil-frame">
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">
-                    <img class="logo-image " src="user/Images/Low/44444.png" alt="Logo">
-                </a>
+                
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -136,28 +141,41 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- frame end -->
 
         <!-- content -->
         <div class="mil-content">
             <div id="swupMain" class="mil-main-transition">
+                
 
                 <!-- banner -->
                 <section class="mil-banner mil-dark-bg">
+                    
+                    
                     <div class="mi-invert-fix">
+                        
+                        
                         <div class="mil-animation-frame">
+                           
                             <div class="mil-animation mil-position-1 mil-scale" data-value-1="7" data-value-2="1.6"></div>
                             <div class="mil-animation mil-position-2 mil-scale" data-value-1="4" data-value-2="1"></div>
                             <div class="mil-animation mil-position-3 mil-scale" data-value-1="1.2" data-value-2=".1"></div>
                         </div>
+                        
 
                         <div class="mil-gradient"></div>
-
+                       
+                       
                         <div class="container">
+                            
                             <div class="mil-banner-content mil-up">
+                                
 
-                                <h1 class="mil-muted mil-mb-60">Designer <span class="mil-thin">of your</span><br> Dream <span class="mil-thin"></span></h1>
+                                <h1 class="mil-muted mil-mb-60" ><a href="/">
+                                
+                                    <img class="logo-image " src="user/Images/Low/44444.png" alt="Logo">
+                                </a> Designer <span class="mil-thin">of your</span>           Dream <span class="mil-thin"></span></h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
