--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -24,12 +24,12 @@
                                     <li class="mil-up ">
                                         <a href="/">Home</a>
                                     </li>
-                                    <li class="mil-up">
+                                    <!-- <li class="mil-up">
                                         <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-up">
                                         <a href="/events">Events</a>
-                                    </li>
+                                    </li> -->
                                     <li class="mil-up">
                                         <a href="/contact">Contact</a>
                                     </li>
