photo changing start

--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -237,7 +237,7 @@
 
                                     <div class="mil-about-quote">
                                         <div class="mil-avatar mil-up">
-                                            <img src="user/Images/razilImages/2.webp" alt="Founder">
+                                            <img src="/user/Images/Razikka/razil2.jpg" alt="Founder">
                                             
                                         </div>
                                         <h6 class="mil-quote mil-up">Razil <span class="mil-thin"></span> <br> <span class="mil-thin">Founder and CEO</span></h6>
@@ -250,7 +250,7 @@
                                 <div class="mil-about-photo mil-mb-90">
                                     <div class="mil-lines-place"></div>
                                     <div class="mil-up mil-img-frame" style="padding-bottom: 160%;">
-                                        <img src="/Working/file.png" alt="img" class="mil-scale" data-value-1="1" data-value-2="1.2">
+                                        <img src="/user/Images/Razikka/file.png" alt="img" class="mil-scale" data-value-1="1" data-value-2="1.2">
                                     </div>
                                 </div>
 
