--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -49,8 +49,21 @@
                                     <li class="mil-has-children">
                                         <a href="/testimonial">Reflections</a>
                                     </li> -->
+                                    
 
 
+                                    <li class="mil-has-children">
+                                        <a href="/Business_Fix">Business Fix</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/Career_Cadence">Career Cadence</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/PrepNLift">PrepNLift</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/Institute2Industry">Institute2Industry</a>
+                                    </li>
 
 
                                     
@@ -350,7 +363,7 @@
 
                                     <p class="mil-up mil-mb-60">Together, our creative team is committed to delivering impactful work that exceeds expectations.</p>
 
-                                    <div class="mil-up"><a href="/events" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div>
+                                    <!-- <div class="mil-up"><a href="/events" class="mil-button mil-arrow-place mil-mb-60"><span>Read more</span></a></div> -->
 
                                     <h4 class="mil-up"><span class="mil-thin">We</span> deliver <br><span class="mil-thin">exceptional</span> results.</h4>
                                 </div>
@@ -381,11 +394,11 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/rajin.jpg" alt="Social Media Head">
+                                                <img src="/user/Images/TEAM/Tom.jpg" alt="Social Media Head">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Rajin Sai</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Social Media Head</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Tom Thomaskutty</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">L&D specialist</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
                                                             <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
@@ -403,11 +416,11 @@
                                             <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent"></span></p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/marketing Head.jpg" alt="Marketing Head">
+                                                <img src="/user/Images/TEAM/Faheem.jpg" alt="Marketing Head">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Marketing Head</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Marketing Head</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Faheem</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Business development manager</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
                                                             <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
@@ -419,11 +432,11 @@
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/faheem.jpg" alt="Coordinator">
+                                                <img src="/user/Images/TEAM/Amitha.jpg" alt="Coordinator">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Faheem</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Coordinator</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Amitha</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Marketing consultant</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
                                                             <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
@@ -454,7 +467,7 @@
 
 
                 <!-- team -->
-                <section>
+                <!-- <section>
                     <div class="container mil-p-120-30">
                         <div class="row justify-content-between align-items-center">
                             <div class="col-lg-5 col-xl-4">
@@ -481,12 +494,7 @@
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Dilshad</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Accountant</p>
-                                                        <!-- <ul class="mil-social-icons mil-center">
-                                                            <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul> -->
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -497,12 +505,7 @@
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Anan</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Videographer</p>
-                                                        <!-- <ul class="mil-social-icons mil-center">
-                                                            <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul> -->
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -519,12 +522,7 @@
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Pronoy</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">Video Editor</p>
-                                                        <!-- <ul class="mil-social-icons mil-center">
-                                                            <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul> -->
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -535,12 +533,7 @@
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Pranav</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">CGI Specialist</p>
-                                                        <!-- <ul class="mil-social-icons mil-center">
-                                                            <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-twitter"></i></a></li>
-                                                            <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-github"></i></a></li>
-                                                        </ul> -->
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -553,7 +546,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- team end -->
 
 
