--- a/views/user/consulting2.ejs
+++ b/views/user/consulting2.ejs
@@ -9,7 +9,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">BESTRACT</a>
+                <a href="/" class="mil-logo"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -25,12 +25,38 @@
                                     <li class="mil-has-children">
                                         <a href="/">Homepage</a>
                                     </li>
-                                    <li class="mil-has-children mil-active">
+                                    <!-- <li class="mil-has-children mil-active">
                                         <a href="/Business_Fix">Career Cadence</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
+                                    </li> -->
+
+
+
+
+
+
+                                    <li class="mil-has-children">
+                                        <a href="/Business_Fix">Business Fix</a>
                                     </li>
+                                    <li class="mil-has-children mil-active">
+                                        <a href="/Career_Cadence">Career Cadence</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/PrepNLift">PrepNLift</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/Institute2Industry">Institute2Industry</a>
+                                    </li>
+
+
+
+
+
+
+
+                            
                                     <li class="mil-has-children">
                                         <a href="/contact">Contact</a>
                                     </li>    
@@ -108,10 +134,13 @@
         <div class="mil-curtain"></div>
         <!-- curtain end -->
 
+        <img class="logo-image" src="/user/Images/Low/44444.png" alt="Logo" style="z-index: 1010; position: fixed; padding: 20px;">
+
         <!-- frame -->
         <div class="mil-frame">
-            <div class="mil-frame-top">
-                <a href="/" class="mil-logo">BESTRACT</a>
+            <div class="mil-frame-top" >
+                <a href="/" class="mil-logo">
+                </a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
