--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -7,7 +7,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="/" class="mil-logo">BESTRACT</a>
+                <a href="/" class="mil-logo"></a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
@@ -23,12 +23,37 @@
                                     <li class="mil-has-children">
                                         <a href="/">Homepage</a>
                                     </li>
-                                    <li class="mil-has-children">
+                                    <!-- <li class="mil-has-children">
                                         <a href="/consulting1">Consulting1</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="/events">Events</a>
+                                    </li> -->
+
+
+
+
+
+
+                                    <li class="mil-has-children">
+                                        <a href="/Business_Fix">Business Fix</a>
                                     </li>
+                                    <li class="mil-has-children">
+                                        <a href="/Career_Cadence">Career Cadence</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/PrepNLift">PrepNLift</a>
+                                    </li>
+                                    <li class="mil-has-children">
+                                        <a href="/Institute2Industry">Institute2Industry</a>
+                                    </li>
+
+
+
+
+
+
+
                                     <li class="mil-has-children mil-active">
                                         <a href="/contact">Contact</a>
                                     </li>    
@@ -107,10 +132,13 @@
         <div class="mil-curtain"></div>
         <!-- curtain end -->
 
+        <img class="logo-image" src="/user/Images/Low/44444.png" alt="Logo" style="z-index: 1010; position: fixed; padding: 20px;">
+
         <!-- frame -->
         <div class="mil-frame">
-            <div class="mil-frame-top">
-                <a href="/" class="mil-logo">BESTRACT</a>
+            <div class="mil-frame-top" >
+                <a href="/" class="mil-logo">
+                </a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
