--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -57,16 +57,16 @@
 
                         <div class="col-lg-4 mil-mb-60">
 
-                            <h6 class="mil-muted mil-mb-30">Bommanahalli</h6>
+                            <h6 class="mil-muted mil-mb-30">Whitefield</h6>
 
-                            <p class="mil-light-soft mil-up">Bangalore South , 560068 , KARNATAKA  <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                            <p class="mil-light-soft mil-up">GoSpaze Realty , Third Floor , SSR Arcade , Varthur Main Rd , Bengaluru , 560066<span class="mil-no-wrap"></span></p>
 
                         </div>
                         <div class="col-lg-4 mil-mb-60">
 
-                            <h6 class="mil-muted mil-mb-30">Madivala</h6>
+                            <h6 class="mil-muted mil-mb-30">HSR Layout </h6>
 
-                            <p class="mil-light-soft">Bangalore South , 560068 , KARNATAKA  <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                            <p class="mil-light-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala , Bengaluru , 560034 <span class="mil-no-wrap"></span></p>
 
                         </div>
                     </div>
