--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -116,16 +116,16 @@
 
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-mb-30">Bommanahalli</h6>
+                                            <h6 class="mil-muted mil-mb-30">Whitefield</h6>
 
-                                            <p class="mil-light-soft mil-up">Bangalore South , 560068 , KARNATAKA , INDIA <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                                            <p class="mil-light-soft mil-up">GoSpaze Realty , Varthur Main Rd  , Thubarahalli , Bengaluru <span class="mil-no-wrap">560066</span></p>
 
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-mb-30">Madivala</h6>
+                                            <h6 class="mil-muted mil-mb-30">HSR Layout</h6>
 
-                                            <p class="mil-light-soft">Bangalore South , 560068 , KARNATAKA , INDIA <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                                            <p class="mil-light-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala <span class="mil-no-wrap">560034</span></p>
 
                                         </div>
                                     </div>
@@ -253,7 +253,7 @@
                                             <img src="/user/Images/Razikka/razil2.jpg" alt="Founder">
                                             
                                         </div>
-                                        <h6 class="mil-quote mil-up">Razil <span class="mil-thin"></span> <br> <span class="mil-thin">Founder and CEO</span></h6>
+                                        <h6 class="mil-quote mil-up">Razil <span class="mil-thin"></span> <br> <span class="mil-thin">Founder & CEO</span></h6>
                                     </div>
                                 </div>
 
@@ -382,7 +382,7 @@
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Razil</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Founder & CEO</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
                                                             <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
@@ -397,7 +397,7 @@
                                                 <img src="/user/Images/TEAM/Tom.jpg" alt="Social Media Head">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Tom Thomaskutty</a></h5>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Tom Sebastian</a></h5>
                                                         <p class="mil-link mil-light-soft mil-mb-10">L&D specialist</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
@@ -436,7 +436,7 @@
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
                                                         <h5 class="mil-muted mil-mb-5"><a href="">Amitha</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Marketing consultant</p>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Marketing Manager</p>
                                                         <!-- <ul class="mil-social-icons mil-center">
                                                             <li><a href="/" target="_blank" class="social-icon"> <i class="fab fa-behance"></i></a></li>
                                                             <li><a href="" target="_blank" class="social-icon"> <i class="fab fa-dribbble"></i></a></li>
@@ -467,7 +467,7 @@
 
 
                 <!-- team -->
-                <!-- <section>
+                <section>
                     <div class="container mil-p-120-30">
                         <div class="row justify-content-between align-items-center">
                             <div class="col-lg-5 col-xl-4">
@@ -489,22 +489,22 @@
                                         <div class="col-sm-6">
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/dilshad.jpg" alt="Accountant">
+                                                <img src="/user/Images/TEAM/Shahana.jpg" alt="Accountant">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Dilshad</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Accountant</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Shahana</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Managing Director</p>
                                                         
                                                     </div>
                                                 </div>
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/anan.heic" alt="Videographer">
+                                                <img src="/user/Images/TEAM/nived.jpg" alt="Videographer">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Anan</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Videographer</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Nived Ullas</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Digital Marketing Specialist</p>
                                                         
                                                     </div>
                                                 </div>
@@ -517,22 +517,22 @@
                                             <p class="mil-mobile-hidden mil-text-sm mil-mb-30" style="height: 30px;"><span class="mil-accent"></span></p>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/pronoy.jpg" alt="Video Editor">
+                                                <img src="/user/Images/TEAM/ameya.jpg" alt="Content Wrier">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Pronoy</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">Video Editor</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Ameya</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Content Wrier</p>
                                                         
                                                     </div>
                                                 </div>
                                             </div>
 
                                             <div class="mil-team-card mil-up mil-mb-30">
-                                                <img src="user/ourTeam/pranav.jpg" alt="CGI Specialist">
+                                                <img src="/user/Images/TEAM/vinayak.jpg" alt="CGI Specialist">
                                                 <div class="mil-description">
                                                     <div class="mil-secrc-text">
-                                                        <h5 class="mil-muted mil-mb-5"><a href="">Pranav</a></h5>
-                                                        <p class="mil-link mil-light-soft mil-mb-10">CGI Specialist</p>
+                                                        <h5 class="mil-muted mil-mb-5"><a href="">Vinayak</a></h5>
+                                                        <p class="mil-link mil-light-soft mil-mb-10">Social Media Marketing Specialist</p>
                                                         
                                                     </div>
                                                 </div>
@@ -546,7 +546,7 @@
                             </div>
                         </div>
                     </div>
-                </section> -->
+                </section>
                 <!-- team end -->
 
 
