--- a/views/user/error.ejs
+++ b/views/user/error.ejs
@@ -81,16 +81,16 @@
 
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-mb-30">Bommanahalli</h6>
+                                            <h6 class="mil-muted mil-mb-30">Whitefield</h6>
 
-                                            <p class="mil-light-soft mil-up">Bangalore South , 560068 , KARNATAKA , INDIA <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                                            <p class="mil-light-soft mil-up">GoSpaze Realty , Varthur Main Rd  , Thubarahalli , Bengaluru <span class="mil-no-wrap">560066</span></p>
 
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-muted mil-mb-30">Madivala</h6>
+                                            <h6 class="mil-muted mil-mb-30">HSR Layout</h6>
 
-                                            <p class="mil-light-soft">Bangalore South , 560068 , KARNATAKA , INDIA <span class="mil-no-wrap">+91 8086 602 159</span></p>
+                                            <p class="mil-light-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala <span class="mil-no-wrap">560034</span></p>
 
                                         </div>
                                     </div>
