coler theam change strating

--- a/views/user/footer.ejs
+++ b/views/user/footer.ejs
@@ -1,5 +1,5 @@
  <!-- footer -->
- <footer class="mil-dark-bg">
+ <footer class="mil-light-bg">
     <div class="mi-invert-fix">
         <div class="container mil-p-120-60">
             <div class="row justify-content-between">
@@ -40,9 +40,9 @@
                         <div class="col-md-6 col-lg-5">
 
                             <ul class="mil-menu-list mil-up mil-mb-60">
-                                <li><a href="" class="mil-light-soft">Privacy Policy</a></li>
-                                <li><a href="" class="mil-light-soft">Terms and conditions</a></li>
-                                <li><a href="" class="mil-light-soft">Careers</a></li>
+                                <li><a href="" class="mil-dark-soft">Privacy Policy</a></li>
+                                <li><a href="" class="mil-dark-soft">Terms and conditions</a></li>
+                                <li><a href="" class="mil-dark-soft">Careers</a></li>
                             </ul>
 
                         </div>
@@ -59,14 +59,14 @@
 
                             <h6 class="mil-muted mil-mb-30">Whitefield</h6>
 
-                            <p class="mil-light-soft mil-up">GoSpaze Realty , Third Floor , SSR Arcade , Varthur Main Rd , Bengaluru , 560066<span class="mil-no-wrap"></span></p>
+                            <p class="mil-dark-soft mil-up">GoSpaze Realty , Third Floor , SSR Arcade , Varthur Main Rd , Bengaluru , 560066<span class="mil-no-wrap"></span></p>
 
                         </div>
                         <div class="col-lg-4 mil-mb-60">
 
                             <h6 class="mil-muted mil-mb-30">HSR Layout </h6>
 
-                            <p class="mil-light-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala , Bengaluru , 560034 <span class="mil-no-wrap"></span></p>
+                            <p class="mil-dark-soft">3rd Floor , 5th Main , 6thAve St , Teachers Colony , Koramangala , Bengaluru , 560034 <span class="mil-no-wrap"></span></p>
 
                         </div>
                     </div>
