--- a/views/user/userHome.ejs
+++ b/views/user/userHome.ejs
@@ -170,7 +170,7 @@
             <div id="swupMain" class="mil-main-transition">
 
                 <!-- banner -->
-                <section class="mil-banner mil-dark-bg">
+                <section class="mil-banner mil-light-soft">
                     <div class="mi-invert-fix">
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-1 mil-scale" data-value-1="7" data-value-2="1.6"></div>
@@ -187,7 +187,7 @@
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
-                                        <p class="mil-light-soft mil-mb-60">At Bestract, we specialize in training and recruitment, delivering practical, industry-focused solutions that bridge the gap between academic knowledge and real-world needs. Our personalized career development programs and precision-matched recruitment ensure businesses thrive with top-tier talent and innovative solutions tailored for success.</p>
+                                        <p class="mil-dark-soft mil-mb-60">At Bestract, we specialize in training and recruitment, delivering practical, industry-focused solutions that bridge the gap between academic knowledge and real-world needs. Our personalized career development programs and precision-matched recruitment ensure businesses thrive with top-tier talent and innovative solutions tailored for success.</p>
 
                                     </div>
                                 </div>
@@ -274,7 +274,7 @@
                 <!-- about end -->
 
                 <!-- services -->
-                <section class="mil-dark-bg">
+                <section class="mil-light-soft">
                     <div class="mi-invert-fix">
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-1 mil-scale" data-value-1="2.4" data-value-2="1.4" style="top: 300px; right: -100px"></div>
@@ -310,7 +310,7 @@
 
                                     <a href="/Business_Fix" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">BusinessFix<br></h5>
-                                        <p class="mil-light-soft mil-mb-30">Expert advisory and solutions to drive business excellence.</p>
+                                        <p class="mil-dark-soft mil-mb-30">Expert advisory and solutions to drive business excellence.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -319,7 +319,7 @@
 
                                     <a href="/Career_Cadence" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">CareerCadence <br></h5>
-                                        <p class="mil-light-soft mil-mb-30">Streamlined recruitment and strategic hiring solutions.</p>
+                                        <p class="mil-dark-soft mil-mb-30">Streamlined recruitment and strategic hiring solutions.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -328,7 +328,7 @@
 
                                     <a href="/PrepNLift" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">PrepNLift<br></h5>
-                                        <p class="mil-light-soft mil-mb-30">Skills enhancement and industry mentoring for better employability.</p>
+                                        <p class="mil-dark-soft mil-mb-30">Skills enhancement and industry mentoring for better employability.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
@@ -337,7 +337,7 @@
 
                                     <a href="/Institute2Industry" class="mil-service-card-sm mil-up">
                                         <h5 class="mil-muted mil-mb-30">Institute2Industry <br></h5>
-                                        <p class="mil-light-soft mil-mb-30">Training to bridge the gap between academia and industry.</p>
+                                        <p class="mil-dark-soft mil-mb-30">Training to bridge the gap between academia and industry.</p>
                                         <div class="mil-button mil-icon-button-sm mil-arrow-place"></div>
                                     </a>
 
